tests/bedrock/bedrockpolicyengine/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bedrockpolicyengine
